--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <h2 id="section2">ABOUT</h2>
       <h4>ー　osumou flowers について　ー</h4>
       <p>202X年８月プレオープン</p>
-      <p>おすもうさんがお花屋さんになりました。<br>店頭での販売だけの小さなお店です。<br>季節のお花たちと彩りのある生活を楽しみませんか？<br>お会い出来るのを楽しみにしています。</p>
+      <p>おすもうさんがお花屋さんになりました。<br>店頭での販売だけの小さなお店です。<br>季節のお花たちと<br>彩りのある生活をしてみませんか？<br>お会い出来るのを<br>楽しみにしています。</p>
     </div>
     <div class="menu">
       <h2 id="section3">MENU</h2>
@@ -104,8 +104,6 @@
           </div>
         </li>
       </ul>
-      <!-- <div class="menuList">
-      </div> -->
       <p>完全キャッシュレスでの対応をさせて頂いております。</p>
     </div>
     <div class="access">
