--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       <div class="sp-menu">
         <span class="material-icons" id="open">menu</span>
       </div>
-    </div>
-    <div class="pc-menu">
-      <ul>
-        <li><a href="#section1">HOME</a></li>
-        <li><a href="#section2">ABOUT</a></li>
-        <li><a href="#section3">MENU</a></li>
-        <li><a href="#section4">ACCESS</a></li>
-      </ul>
+      <div class="pc-menu">
+        <ul>
+          <li><a href="#section1">HOME</a></li>
+          <li><a href="#section2">ABOUT</a></li>
+          <li><a href="#section3">MENU</a></li>
+          <li><a href="#section4">ACCESS</a></li>
+        </ul>
+      </div>
     </div>
     <!-- carousel -->
     <section>
@@ -65,13 +65,14 @@
       <h2 id="section2">ABOUT</h2>
       <h4>ー　osumou flowers について　ー</h4>
       <p>202X年８月プレオープン</p>
-      <p>おすもうさんがお花屋さんになりました。<br>店頭での販売だけの小さなお店です。<br>季節のお花たちと<br>彩りのある生活をしてみませんか？<br>お会い出来るのを<br>楽しみにしています。</p>
+      <p class="sp-menu">おすもうさんが<br>お花屋さんになりました。<br>店頭での販売だけの小さなお店です。<br>季節のお花たちと<br>彩りのある生活をしてみませんか？<br>お会い出来るのを<br>楽しみにしています。</p>
+      <p class="pc-menu">おすもうさんがお花屋さんになりました。<br>店頭での販売だけの小さなお店です。<br>季節のお花たちと彩りのある生活をしてみませんか？<br>お会い出来るのを楽しみにしています。</p>
     </div>
     <div class="menu">
       <h2 id="section3">MENU</h2>
       <h4>ー 本日の花束 ー</h4>
-      <p>全て日替わりメニューです。<br>3つのサイズからお選び頂けます。<br>季節の様々なお花をご用意しております。</p>
-      <p></p>
+      <p class="sp-menu">全て日替わりメニューです。<br>3つのサイズからお選び頂けます。<br>季節の様々なお花を<br>ご用意しております。</p>
+      <p class="pc-menu">全て日替わりメニューです。<br>3つのサイズからお選び頂けます。<br>季節の様々なお花をご用意しております。</p>
       <ul class="menuList">
         <li>
           <div class="image">
@@ -104,7 +105,8 @@
           </div>
         </li>
       </ul>
-      <p>完全キャッシュレスでの対応をさせて頂いております。</p>
+      <p class="sp-menu">完全キャッシュレスでの対応を<br>させて頂いております。</p>
+      <p class="pc-menu">完全キャッシュレスでの対応をさせて頂いております。</p>
     </div>
     <div class="access">
       <h2 id="section4">ACCESS</h2>
