--- a/index.html
+++ b/index.html
@@ -106,46 +106,46 @@
         </li>
       </ul>
       <p class="sp-menu">完全キャッシュレスでの対応を<br>させて頂いております。</p>
-      <p class="pc-menu">完全キャッシュレスでの対応をさせて頂いております。</p>
+      <p class="pc-menu">ー 完全キャッシュレスでの対応をさせて頂いております。ー</p>
     </div>
     <div class="access">
       <h2 id="section4">ACCESS</h2>
+      <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.188723236014!2d139.7932746!3d35.696973199999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018893554b8eb19%3A0x70237cc76b1dfa74!2z5Zu95oqA6aSo!5e0!3m2!1sja!2sjp!4v1629553636571!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      </div>
       <div class="info">
-        <div class="map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.188723236014!2d139.7932746!3d35.696973199999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018893554b8eb19%3A0x70237cc76b1dfa74!2z5Zu95oqA6aSo!5e0!3m2!1sja!2sjp!4v1629553636571!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
         <div class="goto">
-          <h4>＜公共交通機関でお越しの方＞</h4>
+          <h4>公共交通機関でお越しの方</h4>
           <p>JR総武線 両X駅西口下車 徒歩2分</p>
-          <h4>＜お車でお越しの方＞</h4>
+          <h4>お車でお越しの方</h4>
           <p>駐車場2台</p>
         </div>
-      </div>
-      <div class="address">
-        <table>
-          <tbody>
-            <tr>
-              <td>住所</td>
-              <td>東京都目黒区東山x-x-x</td>
-            </tr>
-            <tr>
-              <td>電話番号</td>
-              <td><a href="#">03-xxxx-xxxx</a></td>
-            </tr>
-            <tr>
-              <td>URL</td>
-              <td><a href="#">osumou-flowers.dotinstall.com</a></td>
-            </tr>
-            <tr>
-              <td>営業時間</td>
-              <td>11:00-20:00</td>
-            </tr>
-            <tr>
-              <td>定休日</td>
-              <td>月曜日</td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="address">
+          <table>
+            <tbody>
+              <tr>
+                <td>住所</td>
+                <td>東京都目黒区東山x-x-x</td>
+              </tr>
+              <tr>
+                <td>電話番号</td>
+                <td><a href="#">03-xxxx-xxxx</a></td>
+              </tr>
+              <tr>
+                <td>URL</td>
+                <td><a href="#">osumou-flowers.dotinstall.com</a></td>
+              </tr>
+              <tr>
+                <td>営業時間</td>
+                <td>11:00-20:00</td>
+              </tr>
+              <tr>
+                <td>定休日</td>
+                <td>月曜日</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </main>
