--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>osumou flowers</title>
+  <title>目黒区東山のお花屋さん osumou flowers</title>
   <link rel="shortcut icon" href="img/favicon_white.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -115,10 +115,14 @@
       </div>
       <div class="info">
         <div class="goto">
-          <h4>公共交通機関でお越しの方</h4>
-          <p>JR総武線 両X駅西口下車 徒歩2分</p>
-          <h4>お車でお越しの方</h4>
-          <p>駐車場2台</p>
+          <div class="train">
+            <h4>公共交通機関でお越しの方</h4>
+            <p>JR総武線 両X駅西口下車 徒歩2分</p>
+          </div>
+          <div class="car">
+            <h4>お車でお越しの方</h4>
+            <p>駐車場2台</p>
+          </div>
         </div>
         <div class="address">
           <table>
@@ -151,6 +155,7 @@
   </main>
   <footer>
     <img src="img/logo_white_rect.png" alt="">
+    <a href="https://note.com/dotinstall/n/ne942bee80112 ">株式会社ドットインストールの企画にて提供されたロゴ画像を使用しています</a>
   </footer>
   <script src="js/main.js"></script>
 </body>
