--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
   </main>
   <footer>
     <img src="img/logo_white_rect.png" alt="">
-    <a href="https://note.com/dotinstall/n/ne942bee80112 ">株式会社ドットインストールの企画にて提供されたロゴ画像を使用しています</a>
+    <a class="sp-menu" href="https://note.com/dotinstall/n/ne942bee80112 ">株式会社ドットインストールの企画にて<br>提供されたロゴ画像を使用しています</a>
+    <a class="pc-menu" href="https://note.com/dotinstall/n/ne942bee80112 ">株式会社ドットインストールの企画にて提供されたロゴ画像を使用しています</a>
   </footer>
   <script src="js/main.js"></script>
 </body>
